Fix alignment/add classes

--- a/src/pages/standard.css
+++ b/src/pages/standard.css
@@ -30,10 +30,26 @@
     padding-left: 1%;
     padding-right: 50px; /* provide space for the button */
     order: 2;
-
     white-space: nowrap;
     overflow: hidden;
-    
+}
+
+.inputTextRight {
+    font-size: 16px;
+    padding: 8px;
+    border: 1px solid #202020;
+    background-color: #202020;
+    width: 100%;
+    text-align: right;
+    padding-left: 1%;
+    padding-right: 1%;
+    order: 2;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.grayText {
+    color: gray;
 }
 
 
